2010-11-06	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1715/cpukit
	* rtems/score/cpu.h: Fix typo on _CPU_Context_Restart_self.

2010-10-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/score/cpu.h: Add RTEMS_COMPILER_NO_RETURN_ATTRIBUTE to
	_CPU_Context_restore() because it does not return. Telling GCC this
	avoids generation of dead code.

2010-07-30	Gedare Bloom <giddyup44@yahoo.com>

	PR 1599/cpukit
	* cpu_asm.S: Rename _Context_Switch_necessary to
	_Thread_Dispatch_necessary to more properly reflect the intent.

2010-07-29	Gedare Bloom <giddyup44@yahoo.com>

	PR 1635/cpukit
	* rtems/score/cpu.h, rtems/score/types.h: Refactoring of priority
	handling, to isolate the bitmap implementation of priorities in the
	supercore so that priority management is a little more modular. This
	change is in anticipation of scheduler implementations that can
	select how they manage tracking priority levels / finding the highest
	priority ready task. Note that most of the changes here are simple
	renaming, to clarify the use of the bitmap-based priority management.

2010-07-27	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/asm.h: Fixed header guard.
	* rtems/score/cpu.h: Assembler compatibility fixes.

2010-07-16	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/score/cpu.h: Include <rtems/score/types.h> first.
	* rtems/score/types.h: Use <rtems/score/basedefs.h> header file.

2010-06-28	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1573/cpukit
	* cpu_asm.S, rtems/score/cpu.h: Add a per cpu data structure which
	contains the information required by RTEMS for each CPU core. This
	encapsulates information such as thread executing, heir, idle and
	dispatch needed.

2010-05-10	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* Makefile.am, cpu_asm.S, avr/boot.h, avr/common.h, avr/crc16.h,
	avr/delay.h, avr/eeprom.h, avr/fuse.h, avr/interrupt.h, avr/io.h,
	avr/io1200.h, avr/io2313.h, avr/io2323.h, avr/io2333.h, avr/io2343.h,